; ModuleID = '/home/carl/AnghaBench/systemd/src/machine/extr_test-machine-tables.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/machine/extr_test-machine-tables.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kill_who = common dso_local global i32 0, align 4
@KILL_WHO = common dso_local global i32 0, align 4
@machine_class = common dso_local global i32 0, align 4
@MACHINE_CLASS = common dso_local global i32 0, align 4
@machine_state = common dso_local global i32 0, align 4
@MACHINE_STATE = common dso_local global i32 0, align 4
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* @kill_who, align 4
  %7 = load i32, i32* @KILL_WHO, align 4
  %8 = call i32 @test_table(i32 %6, i32 %7)
  %9 = load i32, i32* @machine_class, align 4
  %10 = load i32, i32* @MACHINE_CLASS, align 4
  %11 = call i32 @test_table(i32 %9, i32 %10)
  %12 = load i32, i32* @machine_state, align 4
  %13 = load i32, i32* @MACHINE_STATE, align 4
  %14 = call i32 @test_table(i32 %12, i32 %13)
  %15 = load i32, i32* @EXIT_SUCCESS, align 4
  ret i32 %15
}

declare dso_local i32 @test_table(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
